fix overflow/wrap issues

--- a/app/index.css
+++ b/app/index.css
@@ -3,7 +3,7 @@ body {
   display: grid;
   margin: 0;
   height: 100vh;
-  grid-template: auto 1fr auto / auto 1fr
+  grid-template: auto 1fr auto / 200px 1fr
 }
 
 header {
@@ -20,8 +20,15 @@ header {
   min-width: 0;
 }
 
+.left-sidebar * {
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .left-sidebar ul {
-  padding-left: inherit;
+  padding-left: initial;
+  list-style-position: inside;
 }
 
 main {
